# slsqp-jax

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yml  AGENTS.md  IMPLEMENTATION_PLAN.md  LICENSE  README.md  benchmark_cpu_gpu.ipynb  benchmark_solver_configs.ipynb  codecov.yml  main.py  pyproject.toml
.github/workflows/: pre-commit.yml  release.yml  test.yml
docs/: conf.py
docs/source/: api.md  conf.py  index.md
docs/source/api/: compat.md  config.md  hessian.md  index.md  lpeca.md  merit.md  results.md  slsqp_jax.md  state.md  types.md  utils.md
docs/source/api/inner/: base.md  cholesky.md  craig.md  hr_stcg.md  index.md  krylov.md  masking.md  minres_qlp.md  projected_cg.md
docs/source/api/qp/: active_set.md  api.md  bound_fixing.md  direct.md  index.md  inequality.md  proximal.md
docs/source/api/slsqp/: bounds.md  derivatives.md  hvp.md  index.md  preconditioner.md  solver.md  termination.md  verbose.md
scripts/: update_slow_marks.py
slsqp_jax/: __init__.py  _benchmark_bootstrap.py  compat.py  config.py  hessian.py  inner_solver.py  lpeca.py  merit.py  qp_solver.py  results.py  scaling.py  solver.py  state.py  types.py  utils.py
slsqp_jax/diagnostics/: __init__.py  intercept.py  playbook.py  records.py  report.py  runner.py  signals.py
slsqp_jax/inner/: __init__.py  base.py  cholesky.py  craig.py  hr_stcg.py  krylov.py  masking.py  minres_qlp.py  projected_cg.py
slsqp_jax/qp/: __init__.py  _inner_check.py  active_set.py  api.py  bound_fixing.py  direct.py  inequality.py  proximal.py
slsqp_jax/slsqp/: __init__.py  _step_body.py  bounds.py  derivatives.py  hvp.py  multipliers.py  preconditioner.py  solver.py  termination.py  verbose.py
tests/: __init__.py  conftest.py  test_benchmark_problem.py  test_bound_multipliers.py  test_comparison.py  test_compat.py  test_divergence_recovery.py  test_filtersqp_termination.py  test_hardening_reverts.py  test_hr_inexact_stcg.py  test_ill_conditioned.py  test_inner_solver.py  test_lpeca.py  test_ls_multipliers.py  test_qp_solver.py  test_qp_tolerance_routing.py  test_robustness_review.py  test_scaling.py  test_slsqp.py  test_stagnation_fixes.py  test_termination_codes.py
tests/diagnostics/: __init__.py  conftest.py  test_capture_state_at_step.py  test_diagnostic_run_context.py  test_playbook.py  test_registry.py  test_report.py  test_runner.py  test_signals_integration.py  test_signals_synthetic.py
