[project]
name = "slsqp-jax"
version = "0.1.0"
description = "Sequential Least Squares Programming (SLSQP) optimizer implemented in pure JAX"
readme = "README.md"
license = "MIT"
authors = [
    { name = "Luciano Paz" }
]
requires-python = ">=3.12"
dependencies = [
    "beartype>=0.18.0",
    "equinox>=0.11.0",
    "jax>=0.9.0",
    "jaxlib>=0.9.0",
    "jaxtyping>=0.3.7",
    "numpy>=2.4.2",
    "optimistix>=0.0.11",
    "scipy>=1.17.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov",
    "matplotlib",
]
docs = [
    "sphinx>=7.0",
    "myst-parser>=2.0",
    "sphinx-autodoc-typehints>=2.0",
    "sphinx-copybutton>=0.5",
    "furo>=2024.0",
]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling", "hatch-vcs"]

[tool.hatch.version]
source = "vcs"
fallback-version = "0.0.0"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501", "F722"]

[tool.pytest.ini_options]
addopts = [
    "--cov=slsqp_jax",
    "--cov-report=term-missing",
    "-v",
    "--doctest-modules"
]
testpaths = [
    "slsqp_jax",
    "tests",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[tool.coverage.report]
exclude_lines = [
  "pragma: nocover",
  "pragma: no cover",
  "raise NotImplementedError",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
ignore_errors = true
omit = [
  "tests/*",
]
